Переделал разметку и графику для всех страниц

--- a/index.html
+++ b/index.html
@@ -1,245 +1,196 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Студия Nerds</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="favicon/180.png">
-  <link rel="manifest" href="manifest.webmanifest">
+  <meta charset="utf-8">
+  <title>Дизайн-студия «Нёрдс»</title>
+  <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
+  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/180.png">
 </head>
 
-<body class="page-body">
+<body>
 
   <header class="main-header">
-    <div class="container">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="img/logo.svg" alt="Логотип студии Nerds" width="160" height="65">
-        </a>
-        <ul class="site-navigation">
-          <li class="site-navigation-current">
-            <a>Студия</a>
-          </li>
-          <li>
-            <a href="blank.html">Клиенты</a>
-          </li>
-          <li>
-            <a href="catalog.html">Магазин</a>
-          </li>
-          <li>
-            <a href="blank.html">Контакты</a>
-          </li>
-        </ul>
-        <div class="user-navigation">
-          <a class="cart-link" href="#">Корзина</a>
-        </div>
-      </nav>
+    <nav>
+      <a>
+        <img src="img/nerds-logo.png" width="160" height="65" alt="">
+      </a>
+      <ul>
+        <li><a href="index.html">Студия</a></li>
+        <li><a href="blank.html">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="blank.html">Контакты</a></li>
+      </ul>
+      <!-- Тут иконка для корзины -->
+      <a href="blank.html">Корзина</a>
+    </nav>
 
-      <h1>Студия Nerds</h1>
+    <h1>Дизайн-студия «Нёрдс»</h1>
 
-      <section class="features">
-        <h2>Наши преимущества</h2>
-        <ul class="features-list">
-          <li class="features-item">
-            <h3>Долго, дорого, <br>скрупулезно.</h3>
-            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-            <a class="button" href="blank.html">Узнать больше</a>
-          </li>
-          <!--
-        <li class="features-item">
-          <h3>Любим математику как никто другой</h3>
-          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-          <a class="button" href="blank.html">Узнать больше</a>
+    <section>
+      <h2>Преимущества</h2>
+      <!-- Тут ниже слайдер -->
+      <ul>
+        <li>
+          <h3>Долго, дорого, скрупулезно.</h3>
+          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+          <a href="blank.html">Узнать больше</a>
         </li>
-        <li class="features-item">
-            <h3>Только ночь, только хардкор</h3>
-            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-            <a class="button" href="blank.html">Узнать больше</a>
+        <li>
+          <h3>Любим математику как никто другой.</h3>
+          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+          <a href="blank.html">Узнать больше</a>
         </li>
-        -->
-        </ul>
-      </section>
-
-    </div>
+        <li>
+          <h3>Только ночь, только хардкор</h3>
+          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+          <a href="blank.html">Узнать больше</a>
+        </li>
+      </ul>
+    </section>
   </header>
 
-  <main class="container">
-
-    <section class="products">
-      <h2>Наши продукты</h2>
-      <ul class="products-list">
-        <li class="products-item">
+  <main>
+    <section>
+      <h2>Услуги</h2>
+      <ul>
+        <li>
           <h3>Веб-сайты</h3>
+          <p>
+            <img src="img/illustration-1.jpg" alt="" width="300" height="146">
+          </p>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <div class="products-image">
-            <img src="img/illustration-1.png" alt="Веб-сайт" width="300" height="146">
-          </div>
-          <button class="button products-button products-button-site" type="button">Заказать</button>
+          <a href="blank.html">Заказать</a>
         </li>
-        <li class="products-item">
+        <li>
           <h3>Приложения</h3>
+          <p>
+            <img src="img/illustration-2.jpg" alt="" width="300" height="146">
+          </p>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <div class="products-image">
-            <img src="img/illustration-2.png" alt="Приложение" width="300" height="146">
-          </div>
-          <button class="button products-button products-button-app" type="button">Заказать</button>
+          <a href="blank.html">Заказать</a>
         </li>
-        <li class="products-item">
+        <li>
           <h3>Презентации</h3>
+          <p>
+            <img src="img/illustration-3.jpg" alt="" width="300" height="146">
+          </p>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <div class="products-image">
-            <img src="img/illustration-3.png" alt="Презентация" width="300" height="146">
-          </div>
-          <button class="button products-button products-button-presentaion" type="button">Заказать</button>
+          <a href="blank.html">Заказать</a>
         </li>
       </ul>
     </section>
 
-    <section class="about">
-      <!-- <h2>О студии</h2> -->
-      <div class="about-text">
-        <p class="about-intro">Мы — маленькая, но гордая<br> дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчетпревыше креатива. Работаем не покладая
-          рук, как роботы.</p>
-        <p class="about-list-header">Выполняем заказы на разработку:</p>
-        <ul class="about-list">
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
-        </ul>
-      </div>
-      <div class="about-statistics">
-        <img src="img/nerds-illustration.png" alt="Логотип Nerds" width="360" height="208">
-        <p class="about-list-header">с 2004 года Любим точность во всем:</p>
-        <dl class="about-table">
-          <div class="about-table-item">
-            <dt class="about-table-header">146<span>%</span></dt>
-            <dd class="about-table-text">Уровень самоотдачи</dd>
-          </div>
-          <div class="about-table-item">
-            <dt class="about-table-header">100<span>%</span></dt>
-            <dd class="about-table-text">Соблюдение сроков</dd>
-          </div>
-          <div class="about-table-item">
-            <dt class="about-table-header">50<span>%</span></dt>
-            <dd class="about-table-text">Минимальная предоплата</dd>
-          </div>
-        </dl>
-      </div>
+    <section>
+      <h2>О студии</h2>
+      <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая
+        рук, как роботы.</p>
+      <p>Выполняем заказы на разработку:</p>
+      <ul>
+        <li>Веб-сайтов любой сложности</li>
+        <li>Мобильных приложений для iOS и Android</li>
+        <li>Слайдшоу и видео для корпоративных презентаций</li>
+      </ul>
+      <h3>Наша статистика</h3>
+      <img src="img/nerds-illustration.jpg" alt="" width="360" height="208">
+      <table>
+        <caption>с 2004 года Любим точность во всем:</caption>
+        <tr>
+          <td>146<sup>%</sup></td>
+          <td>100<sup>%</sup></td>
+          <td>50<sup>%</sup></td>
+        </tr>
+        <tr>
+          <th>Уровень самоотдачи</th>
+          <th>Соблюдение сроков</th>
+          <th>Минимальная предоплата</th>
+        </tr>
+      </table>
     </section>
 
-    <section class="partners">
-      <h2>Наши партнёры</h2>
-      <ul class="partners-list">
-        <li class="partners-item">
-          <a class="partners-link" href="blank.html" target="_blank">
-            <!-- <span>HTML Academy</span> -->
-            <img src="img/htmlacademi.png" width="200" height="68" alt="Бородинский">
+    <section>
+      <h2>Партнеры</h2>
+      <ul>
+        <li>
+          <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
+            <img src="img/logo-htmlacademy.png" alt="" width="199" height="57">
           </a>
         </li>
-        <li class="partners-item">
-          <a class="partners-link" href="blank.html" target="_blank">
-            <!-- <span>Borodinski</span> -->
-            <img src="img/borodinski.png" width="209" height="90" alt="Бородинский">
+        <li>
+          <a href="blank.html">
+            <img src="img/logo-borodinski.jpg" alt="" width="209" height="90">
           </a>
         </li>
-        <li class="partners-item">
-          <a class="partners-link" href="blank.html" target="_blank">
-            <!-- <span>Pink</span> -->
-            <img src="img/pink.png" width="185" height="52" alt="Бородинский">
+        <li>
+          <a href="blank.html">
+            <img src="img/logo-pink.png" alt="" width="185" height="52">
           </a>
         </li>
-        <li class="partners-item">
-          <a class="partners-link" href="blank.html" target="_blank">
-            <!-- <span>Mishka</span> -->
-            <img src="img/mishka.png" width="185" height="52" alt="Бородинский">
+        <li>
+          <a href="blank.html">
+            <img src="img/logo-mishka.png" alt="" width="173" height="84">
           </a>
         </li>
       </ul>
     </section>
-
-
   </main>
 
   <footer class="main-footer">
-    <section class="contacts">
-      <div class="container">
-        <div>
-          <h2>Nerds design studio</h2>
-          <p>
-            191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8<br>
-          </p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <button class="button" type="button">Напишите нам</button>
-        </div>
-      </div>
+
+    <section>
+      <h2>Контакты</h2>
+      <!-- Здесь будет карта -->
+      <img src="img/map.jpg" alt="" width="1440" height="416">
+      <p>NЁRDS DESIGN STUDIO</p>
+      <p>
+        наб. Реки Карповки, 5 лит П, Санкт-Петербург
+      </p>
+      <p>
+        <a href="tel:+78005558628">+7 800 555-86-28</a>
+      </p>
+      <button type="button">Напишите нам</button>
     </section>
-    <div class="container">
-      <section class="footer-social">
-        <ul>
-          <li>
-            <a class="social-button" href="#">
-              <span>Вконтакте</span>
-              <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z"
-                  fill="white" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="social-button" href="#">
-              <span>Facebook</span>
-              <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="social-button" href="#">
-              <span>Instagram</span>
-              <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z"
-                  fill="white" />
-              </svg>
-            </a>
-          </li>
-        </ul>
-        <div>
-          <h2>Давайте дружить, это выгодно!</h2>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
-        </div>
-      </section>
-    </div>
+
+    <section>
+      <h2>Мы в социальных сетях</h2>
+      <ul>
+        <li>
+          <a href="blank.html">Вконтакте</a>
+        </li>
+        <li>
+          <a href="blank.html">Фейсбук</a>
+        </li>
+        <li>
+          <a href="blank.html">Инстаграм</a>
+        </li>
+      </ul>
+      <p>Давайте дружить, это выгодно!</p>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
+    </section>
   </footer>
 
-  <!-- <section class="modal">
+  <section>
     <h2>Напишите нам</h2>
-    <form class="modal-form" action="https://echo.htmlacademy.ru" method="POST">
-      <p>
-        <label for="email-name">Ваше имя:</label>
-        <input id="email-name" type="text" name="name" placeholder="Имя Фамилия">
-      </p>
-      <p>
-        <label for="email-name">Ваш email:</label>
-        <input id="email-name" type="email" name="email" placeholder="email@example.com ">
-      </p>
-      <label for="email-text">Текст письма:</label><br>
-      <textarea name="text" id="email-text" cols="30" rows="10">В свободной форме</textarea>
-      <button class="button" type="submit">Отправить</button>
+    <form action="https://echo.htmlacademy.ru" method="post">
+      <div>
+        <label for="name">Ваше имя:</label>
+        <input id="name" type="text" name="name" placeholder="Имя Фамилия">
+      </div>
+      <div>
+        <label for="email">Ваш e-mail:</label>
+        <input id="email" type="email" name="email" placeholder="email@example.com">
+      </div>
+      <div>
+        <label for="message">Текст письма:</label>
+        <textarea id="message" name="message" placeholder="В свободной форме"></textarea>
+      </div>
+      <button type="submit">Отправить</button>
     </form>
-    <button class="modal-close" type="button">Закрыть</button>
-  </section> -->
+    <button type="button">Закрыть</button>
+  </section>
+
 </body>
 
 </html>
