--- a/catalog.html
+++ b/catalog.html
@@ -1,275 +1,258 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Магазин Nerds</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="favicon/180.png">
-  <link rel="manifest" href="manifest.webmanifest">
+  <meta charset="utf-8">
+  <title>Дизайн-студия «Нёрдс»</title>
+  <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
 </head>
 
-<body class="page-body inner-page">
-  <header class="main-header">
-    <div class="container">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="img/logo.svg" alt="Логотип студии Nerds" width="160" height="65">
-        </a>
-        <ul class="site-navigation">
-          <li>
-            <a href="blank.html">Студия</a>
-          </li>
-          <li>
-            <a href="blank.html">Клиенты</a>
-          </li>
-          <li class="site-navigation-current">
-            <a>Магазин</a>
-          </li>
-          <li>
-            <a href="blank.html">Контакты</a>
-          </li>
-        </ul>
-        <div class="user-navigation">
-          <a class="cart-link" href="#">Корзина</a>
-        </div>
-      </nav>
-    </div>
+<body>
+
+  <header>
+    <nav>
+      <a href="index.html">
+        <img src="img/nerds-logo.png" width="160" height="65" alt="">
+      </a>
+      <ul>
+        <li><a href="index.html">Студия</a></li>
+        <li><a href="blank.html">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="blank.html">Контакты</a></li>
+      </ul>
+      <!-- Тут иконка для корзины -->
+      <a href="blank.html">Корзина</a>
+    </nav>
+
+    <h1>Магазин готовых шаблонов</h1>
+
   </header>
 
-  <main class="page-catalog container">
+  <main>
 
-    <h1 class="page-title">Магазин готовых шаблонов</h1>
-
-    <section class="filters">
-      <!-- <h2>Фильтр товаров</h2> -->
-      <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
+    <section>
+      <h2>Фильтр шаблонов</h2>
+      <form method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Стоимость:</legend>
+          <!-- Тут элемент с ползунками, который потом будет красиво нарисован -->
+          <div>
+            <label>От
+              <input type="number" name="min-price" placeholder="0" value="0">
+            </label>
+            <label>До
+              <input type="number" name="max-price" placeholder="15000" value="15000">
+            </label>
+          </div>
         </fieldset>
         <fieldset>
           <legend>Сетка:</legend>
           <ul>
-            <li class="filter-option filter-radio">
-              <input class="filter-input-radio filter-input" type="radio" name="grid-group" value="adaptive"
-                id="filter-adaptive" checked>
-              <label for="filter-adaptive">Адаптивная</label>
+            <li>
+              <label>Адаптивная
+                <input type="radio" name="grid" value="adaptive" checked>
+              </label>
             </li>
-            <li class="filter-option filter-radio">
-              <input class="filter-input-radio filter-input" type="radio" name="grid-group" value="fix" id="filter-fix">
-              <label for="filter-fix">Фиксированная</label>
+            <li>
+              <label>Фиксированная
+                <input type="radio" name="grid" value="fixed">
+              </label>
             </li>
-            <li class="filter-option filter-radio">
-              <input class="filter-input-radio filter-input" type="radio" name="grid-group" value="fluid"
-                id="filter-fluid" disabled>
-              <label for="filter-fluid">Резиновая</label>
+            <li>
+              <label>Резиновая
+                <input type="radio" name="grid" value="fluid">
+              </label>
             </li>
           </ul>
         </fieldset>
         <fieldset>
           <legend>Особенности:</legend>
           <ul>
-            <li class="filter-option filter-checkbox">
-              <input class="filter-input-checkbox filter-input" type="checkbox" name="slider" id="filter-slider"
-                checked>
-              <label for="filter-slider">Слайдер</label>
+            <li>
+              <label>Слайдер
+                <input type="checkbox" name="slider" checked>
+              </label>
             </li>
-            <li class="filter-option filter-checkbox">
-              <input class="filter-input-checkbox filter-input" type="checkbox" name="features" id="filter-features">
-              <label for="filter-features">Блок преимуществ</label>
+            <li>
+              <label>Блок преимуществ
+                <input type="checkbox" name="advantages">
+              </label>
             </li>
-            <li class="filter-option filter-checkbox">
-              <input class="filter-input-checkbox filter-input" type="checkbox" name="news" id="filter-news" checked>
-              <label for="filter-news">Новости</label>
+            <li>
+              <label>Новости
+                <input type="checkbox" name="news" checked>
+              </label>
             </li>
-            <li class="filter-option filter-checkbox">
-              <input class="filter-input-checkbox filter-input" type="checkbox" name="gallery" id="filter-gallery">
-              <label for="filter-gallery">Галерея</label>
+            <li>
+              <label>Галерея
+                <input type="checkbox" name="gallery">
+              </label>
             </li>
-            <li class="filter-option filter-checkbox">
-              <input class="filter-input-checkbox filter-input" type="checkbox" name="bin" id="filter-bin" disabled>
-              <label for="filter-bin">Корзина</label>
+            <li>
+              <label>Корзина
+                <input type="checkbox" name="cart">
+              </label>
             </li>
           </ul>
         </fieldset>
-        <button class="filter-button button" type="submit">Показать</button>
+        <button type="submit">Показать</button>
       </form>
     </section>
 
+    <section>
+      <h2>Каталог шаблонов</h2>
+      <p>Сортировать:</p>
+      <ul>
+        <li>
+          <a href="blank.html">По цене</a>
+        </li>
+        <li>
+          <a href="blank.html">По типу</a>
+        </li>
+        <li>
+          <a href="blank.html">По названию</a>
+        </li>
+        <li>
+          <a href="blank.html">По убыванию</a>
+        </li>
+        <li>
+          <a href="blank.html">По возрастанию</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="blank.html">
+            <img src="img/img-sedona.jpg" alt="" width="358" height="578">
+            <div>
+              <h3>Sedona</h3>
+              <p>Информационный сайт для туристов</p>
+              <p>9 900 ₽</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="img/img-pink.jpg" alt="" width="358" height="578">
+            <div>
+              <h3>Pink App</h3>
+              <p>Продуктовый лендинг<br>приложения для iOS и Android</p>
+              <p>9 900 ₽</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="img/img-barbershop.jpg" alt="" width="358" height="578">
+            <div>
+              <h3>Barbershop</h3>
+              <p>Сайт салона красоты.<br>Для мужчин, да.</p>
+              <p>9 900 ₽</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="img/img-mishka.jpg" alt="" width="358" height="578">
+            <div>
+              <h3>Mishka</h3>
+              <p>Интернет-магазин вязаных игрушек</p>
+              <p>9 900 ₽</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="img/img-aplus.jpg" alt="" width="358" height="578">
+            <div>
+              <h3>A Plus</h3>
+              <p>Лендинг курсов повышения квалификации</p>
+              <p>9 900 ₽</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="img/img-kvast.jpg" alt="" width="358" height="578">
+            <div>
+              <h3>Кваст</h3>
+              <p>Промо-сайт производителя<br>крафтового кваса</p>
+              <p>9 900 ₽</p>
+            </div>
+          </a>
+        </li>
+      </ul>
 
-
-    <section class="catalog">
-      <!-- <h2>Список продуктов</h2> -->
-      <section class="catalog-sort">
-        <h2>Сортировать</h2>
+      <nav>
         <ul>
           <li>
-            <button class="filter-button" type="button">По цене</button>
+            <a>1</a>
           </li>
           <li>
-            <button class="filter-button" type="button">По типу</button>
+            <a href="blank.html">2</a>
           </li>
           <li>
-            <button class="filter-button" type="button">По названию</button>
+            <a href="blank.html">3</a>
           </li>
           <li>
-            <button class="filter-button" type="button">На уменьшение</button>
-          </li>
-          <li>
-            <button class="filter-button" type="button filter-button">На увеличение</button>
+            <a href="blank.html">Следующая</a>
           </li>
         </ul>
-      </section>
+      </nav>
 
-      <ul class="catalog-list">
-        <li class="catalog-item">
-          <div class="item-top"></div>
-          <img src="img/product-1.jpg" width="358" height="578" alt="">
-          <div class="item-info">
-            <h3>Sedona</h3>
-            <p>Информационный сайт для туристов</p>
-            <button class="button" type="button">9 900 ₽</button>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <div class="item-top"></div>
-          <img src="img/product-2.jpg" width="358" height="578" alt="">
-          <div class="item-info">
-            <h3>Pink</h3>
-            <p>Информационный сайт для туристов</p>
-            <button class="button" type="button">9 900 ₽</button>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <div class="item-top"></div>
-          <img src="img/product-3.jpg" width="358" height="578" alt="">
-          <div class="item-info">
-            <h3>Borodinski</h3>
-            <p>Информационный сайт для туристов</p>
-            <button class="button" type="button">9 900 ₽</button>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <div class="item-top"></div>
-          <img src="img/product-4.jpg" width="358" height="578" alt="">
-          <div class="item-info">
-            <h3>Mishka</h3>
-            <p>Информационный сайт для туристов</p>
-            <button class="button" type="button">9 900 ₽</button>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <div class="item-top"></div>
-          <img src="img/product-5.jpg" width="358" height="578" alt="">
-          <div class="item-info">
-            <h3 class="item-info-title">A+</h3>
-            <p class="item-info-text">Информационный сайт для туристов</p>
-            <button class="button" type="button">9 900 ₽</button>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <div class="item-top"></div>
-          <img src="img/product-6.jpg" width="358" height="578" alt="">
-          <div class="item-info">
-            <h3>Кваст</h3>
-            <p>Информационный сайт для туристов</p>
-            <button class="button" type="button">9 900 ₽</button>
-          </div>
-        </li>
-      </ul>
-      <ul class="pagintaion-list">
-        <li class="pagination-item pagintaion-item-current">
-          <a>1</a>
-        </li>
-        <li class="pagination-item">
-          <a href="#">2</a>
-        </li>
-        <li class="pagination-item">
-          <a href="#">3</a>
-        </li>
-        <li class="pagination-item">
-          <a href="#">Следующая</a>
-        </li>
-      </ul>
     </section>
 
   </main>
 
   <footer class="main-footer">
-    <section class="contacts">
-      <div class="container">
-        <div>
-          <h2>Nerds design studio</h2>
-          <p>
-            191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8<br>
-          </p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <button class="button" type="button">Напишите нам</button>
-        </div>
-      </div>
+
+    <section>
+      <h2>Контакты</h2>
+      <!-- Здесь будет карта -->
+      <img src="img/map.jpg" alt="" width="1440" height="416">
+      <p>NЁRDS DESIGN STUDIO</p>
+      <p>
+        наб. Реки Карповки, 5 лит П, Санкт-Петербург
+      </p>
+      <p>
+        <a href="tel:+78005558628">+7 800 555-86-28</a>
+      </p>
+      <button type="button">Напишите нам</button>
     </section>
-    <div class="container">
-      <section class="footer-social">
-        <ul>
-          <li>
-            <a class="social-button" href="#">
-              <span>Вконтакте</span>
-              <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z"
-                  fill="white" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="social-button" href="#">
-              <span>Facebook</span>
-              <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a class="social-button" href="#">
-              <span>Instagram</span>
-              <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z"
-                  fill="white" />
-              </svg>
-            </a>
-          </li>
-        </ul>
-        <div>
-          <h2>Давайте дружить, это выгодно!</h2>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
-        </div>
-      </section>
-    </div>
+
+    <section>
+      <h2>Мы в социальных сетях</h2>
+      <ul>
+        <li>
+          <a href="blank.html">Вконтакте</a>
+        </li>
+        <li>
+          <a href="blank.html">Фейсбук</a>
+        </li>
+        <li>
+          <a href="blank.html">Инстаграм</a>
+        </li>
+      </ul>
+      <p>Давайте дружить, это выгодно!</p>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
+    </section>
   </footer>
 
   <section>
     <h2>Напишите нам</h2>
-    <form action="https://echo.htmlacademy.ru" method="POST">
-      <p>
-        <label for="email-name">Ваше имя:</label>
-        <input id="email-name" type="text" name="name" placeholder="Имя Фамилия">
-      </p>
-      <p>
-        <label for="email-name">Ваш email:</label>
-        <input id="email-name" type="email" name="email" placeholder="email@example.com ">
-      </p>
-      <label for="email-text">Текст письма:</label><br>
-      <textarea name="text" id="email-text" cols="30" rows="10">В свободной форме</textarea>
-      <button class="button" type="submit">Отправить</button>
+    <form action="https://echo.htmlacademy.ru" method="post">
+      <div>
+        <label for="name">Ваше имя:</label>
+        <input id="name" type="text" name="name" placeholder="Имя Фамилия">
+      </div>
+      <div>
+        <label for="email">Ваш e-mail:</label>
+        <input id="email" type="email" name="email" placeholder="email@example.com">
+      </div>
+      <div>
+        <label for="message">Текст письма:</label>
+        <textarea id="message" name="message" placeholder="В свободной форме"></textarea>
+      </div>
+      <button type="submit">Отправить</button>
     </form>
     <button type="button">Закрыть</button>
   </section>
